--- a/6.SimuladorEventosSympyPart1/SimuladorEventosSympyParte1.ipynb
+++ b/6.SimuladorEventosSympyPart1/SimuladorEventosSympyParte1.ipynb
@@ -315,7 +315,8 @@
     "\n",
     "el numero de camas en el hospital general martin Icaza es de 106 camas\n",
     "\n",
-    "![image.png](attachment:image.png)\n"
+    "![image.png](attachment:image.png)\n",
+    "\n"
    ]
   },
   {
@@ -328,7 +329,11 @@
    "metadata": {},
    "source": [
     "##### numero de camas en la provincia de los rios\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "\n",
+    "- Hospital Provincial del I.E.S.S. Babahoyo Instituto Ecuatoriano de Seguridad Social 46 16.836 2.983 13.801 81,97% 64,85  37.81\n",
+    "- Hospital Cantonal Sagrado Corazón de Jesús Quevedo Ministerio de Salud Pública 71 25.986 8.986 19.827 76,30% 126,56 54,32\n"
    ]
   },
   {
